# cradle

./: .gitignore  CRADLE_MASTER_PLAN.md  README.md  pyproject.toml
.github/workflows/: workflow.yml
docs/: AI_INTEGRATION_HINT.md  CONFIGURATION.md  QUICKSTART.md
examples/: batch_demo.py  demo_app.py
src/cradle/: __init__.py  action.py  cli.py  config.py  core.py  data.py  diet.py  engine.py  git.py  metric.py  middleware.py
tests/: test_action.py  test_action_approval.py  test_auto_recovery.py  test_config.py  test_data.py  test_diet.py  test_diet_data.py  test_git.py  test_integration_harness.py  test_metric.py  test_middleware.py
