[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cradle"
version = "0.1.0"
description = "Project Cradle: Autonomous SRE Agent"
dependencies = [
    "fastapi",
    "uvicorn",
    "httpx",
    "PyYAML",
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-asyncio",
]

[tool.hatch.build.targets.wheel]
packages = ["src/cradle"]
